changes in the path of img files

--- a/feedback.html
+++ b/feedback.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 <div class="cover">
-    <img src="/photonProj/img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
+    <img src="/img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
     <!--<h3 id="logo_alt">-->
     <!--PHOTON GRAPHIX AND INNOVATION<br>PVT. LTD<br>-->
     <!--</h3>-->
 </div>
 <nav class="nav">
-    <a href="/photonProj/index.html">Home</a>
+    <a href="/index.html">Home</a>
     <a href="#services">Services</a>
     <a href="#product">Products</a>
-    <a href="/photonProj/feedback.html">Feedback</a>
+    <a href="/feedback.html">Feedback</a>
 </nav>
 <div class="sect">
     <div id="subsect">
