--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
     <div class="cover">
-            <img src="/photonProj/img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
+            <img src="/img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
             <!--<h3 id="logo_alt">-->
                 <!--PHOTON GRAPHIX AND INNOVATION<br>PVT. LTD<br>-->
             <!--</h3>-->
@@ -27,7 +27,7 @@
            <a href="#home">Home</a>
            <a href="#services">Services</a>
            <a href="#product">Products</a>
-           <a href="/photonProj/feedback.html">Feedback</a>
+           <a href="/feedback.html">Feedback</a>
        </nav>
         <div id="section">
             <aside>
