--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
     <div class="cover">
-            <img src="/img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
+            <img src="img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
             <!--<h3 id="logo_alt">-->
                 <!--PHOTON GRAPHIX AND INNOVATION<br>PVT. LTD<br>-->
             <!--</h3>-->
@@ -27,7 +27,7 @@
            <a href="#home">Home</a>
            <a href="#services">Services</a>
            <a href="#product">Products</a>
-           <a href="/feedback.html">Feedback</a>
+           <a href="feedback.html">Feedback</a>
        </nav>
         <div id="section">
             <aside>
@@ -60,7 +60,7 @@
                 <hr>
             </div>
             <div class="section2">
-                <img src="/photonProj/img/lorem.jpg" alt="lorem" width="200px" height="200px">
+                <img src="img/lorem.jpg" alt="lorem" width="200px" height="200px">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Sit amet purus gravida
