--- a/feedback.html
+++ b/feedback.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Feedback</title>
-    <link rel="stylesheet" href="/photonProj/css/feedback.css">
+    <link rel="stylesheet" href="css/feedback.css">
 </head>
 <body>
 <div class="cover">
-    <img src="/img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
+    <img src="img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
     <!--<h3 id="logo_alt">-->
     <!--PHOTON GRAPHIX AND INNOVATION<br>PVT. LTD<br>-->
     <!--</h3>-->
 </div>
 <nav class="nav">
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="#services">Services</a>
     <a href="#product">Products</a>
-    <a href="/feedback.html">Feedback</a>
+    <a href="feedback.html">Feedback</a>
 </nav>
 <div class="sect">
     <div id="subsect">
