--- a/feedback.html
+++ b/feedback.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Feedback</title>
-    <link rel="stylesheet" href="css/feedback.css">
+    <link rel="stylesheet" href="feedback.css">
 </head>
 <body>
 <div class="cover">
-    <img src="img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
+    <img src="logo.jpg" id="logo" alt="Logo" width="438" height="160">
     <!--<h3 id="logo_alt">-->
     <!--PHOTON GRAPHIX AND INNOVATION<br>PVT. LTD<br>-->
     <!--</h3>-->
