--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <!--<link rel="apple-touch-icon" href="icon.png">-->
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
     </head>
     <body>
     <div class="cover">
-            <img src="img/logo.jpg" id="logo" alt="Logo" width="438" height="160">
+            <img src="logo.jpg" id="logo" alt="Logo" width="438" height="160">
             <!--<h3 id="logo_alt">-->
                 <!--PHOTON GRAPHIX AND INNOVATION<br>PVT. LTD<br>-->
             <!--</h3>-->
@@ -60,7 +60,7 @@
                 <hr>
             </div>
             <div class="section2">
-                <img src="img/lorem.jpg" alt="lorem" width="200px" height="200px">
+                <img src="lorem.jpg" alt="lorem" width="200px" height="200px">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Sit amet purus gravida
